# nomad-backup-operator

./: Dockerfile  README.md  nomad-backup-operator.nomad  nomad-backup.nomad  pyproject.toml  requirements.txt
.github/workflows/: BuildImage.yml
nomad_backup_operator/: __init__.py  __main__.py  config.py  job_builder.py  nomad.py
